# docker-updater

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-agent.yml  build-primary.yml
agent/: Dockerfile  pyproject.toml
agent/app/: api_client.py  config.py  docker_inspector.py  executor.py  main.py
primary/: Dockerfile  start-primary.sh
primary-api/: Dockerfile  pyproject.toml
primary-api/app/: main.py
primary-api/app/api/: admin_agents.py  admin_docker.py  admin_jobs.py  agents.py  docker_targets.py  health.py  jobs.py
primary-api/app/core/: config.py
primary-api/app/models/: api.py  domain.py
primary-api/app/services/: docker_inspector.py  repositories.py
primary-web/: index.html  package-lock.json  package.json  vite.config.ts
primary-web/src/: App.tsx  api.ts  styles.css  types.ts
