[project]
name = "docker-updater-primary-api"
version = "0.1.0"
description = "Primary control plane API for Docker Updater"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.11.3",
  "pydantic-settings==2.9.1",
  "python-dotenv==1.1.0",
  "psycopg[binary]==3.2.6",
  "docker==7.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1"
]
